# bloomee-ext

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/bex-core/: Cargo.toml
assets/bex-core/src/: importer.rs  macros.rs  suggestion.rs
assets/bex-core/wit/chart/: chart-provider.wit
assets/bex-core/wit/importer/: content-importer.wit
assets/bex-core/wit/scrobbler/: scrobbler.wit
assets/bex-core/wit/suggestion/: search-suggestion-provider.wit
assets/factory/: bex-factory.yml  gitignore-block.txt
src/: builder.rs  factory.rs  main.rs  manifest.rs  packer.rs  scaffold.rs  types.rs
src/tester/: host_chart.rs  host_importer.rs  host_lyrics.rs  host_resolver.rs  host_suggestion.rs  mod.rs
src/wit/lyrics/: lyrics-provider.wit
src/wit/resolver/: content-resolver.wit
